Fixed overlapping title on narrow screens

--- a/index.css
+++ b/index.css
@@ -76,13 +76,15 @@
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 118px;
+    margin-top: 180px;
   }
 
   .u-section-1 .u-text-3 {
     margin-left: 0;
   }
-}.u-section-2 .u-sheet-1 {
+}
+
+.u-section-2 .u-sheet-1 {
   min-height: 374px;
 }
 
